--- a/src/components/ProductsList/ProductsListItem.scss
+++ b/src/components/ProductsList/ProductsListItem.scss
@@ -35,3 +35,10 @@
     height: auto;
   }
 }
+.product-quantity{
+  display: flex;
+  text-align: center;
+  input{
+    text-align: center;
+  }
+}
